добавил графику и базовую стилизацию

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 <body>
   <header class="page-header">
     <a class="main-logo" href="index.html">
-      <img class="logo" src="#" alt="Логотип магазина Глэйси">
+      <img class="logo" src="images/vector/logo.svg" width="137" height="56" alt="Логотип магазина Глэйси">
     </a>
     <nav class="main-navigation">
       <ul class="navigation-list site-navigation">
@@ -151,7 +151,7 @@
       <h2 class="visually-hidden">Карта товаров</h2>
       <ul class="assortment-list">
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное малинка">
+          <img class="assortment-image" src="images/catalog/raspberries.png" width="168" height="168" alt="Мороженное Малинка">
           <h3 class="assortment-title">Малинка</h3>
           <p>Сливочное мороженое с малиновым джемом</p>
           <b>310 ₽/кг</b>
@@ -160,7 +160,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное фисташка">
+          <img class="assortment-image" src="images/catalog/pistachio.png" width="168" height="168" alt="Мороженное Фисташка">
           <h3 class="assortment-title">Фисташка</h3>
           <p>Фисташковый пломбир с кусочками шоколада</p>
           <b>340 ₽/кг</b>
@@ -169,7 +169,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное черника">
+          <img class="assortment-image" src="images/catalog/blueberry.png" width="168" height="168" alt="Мороженное Черника">
           <h3 class="assortment-title">Черника</h3>
           <p>Крем-брюле
             с черничным джемом</p>
@@ -179,7 +179,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное бабл-гам">
+          <img class="assortment-image" src="images/catalog/bubble-gum.png" width="168" height="168" alt="Мороженное Бабл-гам">
           <h3 class="assortment-title">Бабл-гам</h3>
           <p>Ванильный пломбир со сладкой посыпкой</p>
           <b>320 ₽/кг</b>
@@ -188,7 +188,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное малинка">
+          <img class="assortment-image" src="images/catalog/blackberry.png" width="168" height="168" alt="Мороженное Ежевика">
           <h3 class="assortment-title">Ежевика</h3>
           <p>Сливочное мороженое с ежевичным джемом</p>
           <b>330 ₽/кг</b>
@@ -197,7 +197,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное малинка">
+          <img class="assortment-image" src="images/catalog/banana.png" width="168" height="168" alt="Мороженное Банан">
           <h3 class="assortment-title">Банан</h3>
           <p>Сливочный пломбир
             с банановым вкусом</p>
@@ -207,7 +207,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное малинка">
+          <img class="assortment-image" src="images/catalog/chocolate.png" width="168" height="168" alt="Мороженное Шоколадка">
           <h3 class="assortment-title">Шоколадка</h3>
           <p>Классический шоколадный пломбир</p>
           <b>270 ₽/кг</b>
@@ -216,7 +216,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное малинка">
+          <img class="assortment-image" src="images/catalog/strawberry.png" width="168" height="168" alt="Мороженное Клубничка">
           <h3 class="assortment-title">Клубничка</h3>
           <p>Сливочный пломбир
             с клубничным вкусом</p>
@@ -226,7 +226,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное малинка">
+          <img class="assortment-image" src="images/catalog/lemon.png" width="168" height="168" alt="Мороженное Лимон">
           <h3 class="assortment-title">Лимон</h3>
           <p>Освежающий лимонный сорбет</p>
           <b>310 ₽/кг</b>
@@ -235,7 +235,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное малинка">
+          <img class="assortment-image" src="images/catalog/menthol.png" width="168" height="168" alt="Мороженное Ментол">
           <h3 class="assortment-title">Ментол</h3>
           <p>Сливочный пломбир с ментоловым сиропом</p>
           <b>320 ₽/кг</b>
@@ -244,7 +244,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное малинка">
+          <img class="assortment-image" src="images/catalog/nuts.png" width="168" height="168" alt="Мороженное Орешек">
           <h3 class="assortment-title">Орешек</h3>
           <p>Фисташковый пломбир с шоколадным сиропом</p>
           <b>360 ₽/кг</b>
@@ -253,7 +253,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="#" alt="Мороженное малинка">
+          <img class="assortment-image" src="images/catalog/creme-brulee.png" width="168" height="168" alt="Мороженное Крем-брюле">
           <h3 class="assortment-title">Крем-брюле</h3>
           <p>Классическое крем-брюле</p>
           <b>280 ₽/кг</b>
@@ -331,7 +331,8 @@
     <section class="copyright">
       <h3 class="visually-hidden">Копирайт</h3>
       <a class="copyright-link" href="#">
-        <img class="copyright-image" src="#" alt="ссылка на сайт htmlacademy">
+        <img class="copyright-image" src="images/vector/logo_htmlacademy.svg" width="93" height="27"
+          alt=".html academy">
       </a>
       <p>Сделано в <a href="#">.html academy</a> © 2021</p>
     </section>
