правки графики и стилизации

--- a/catalog.html
+++ b/catalog.html
@@ -1,9 +1,9 @@
-<!DOCTYPE 3tml>
+<!DOCTYPE html>
 <html lang="ru">
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Глейси | Каталог</title>
+  <title>Каталог | HTML Academy: Глейси</title>
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -51,28 +51,28 @@
     </nav>
   </header>
   <main class="catalog">
+    <h1 class="visually-hidden">Страница каталога</h1>
     <section class="catalog-breadcrumbs">
-      <h2 class="visually-hidden">Навигационная цепочка</h1>
+      <h2 class="visually-hidden">Навигационная цепочка</h2>
       <ul class="breadcrumbs-list">
-        <li class="bredcrambs-item">
-          <a class="bredcrambs-link" href="index.html">Главная</a>
+        <li class="breadcrambs-item">
+          <a class="breadcrambs-link" href="index.html">Главная</a>
         </li>
-        <li class="bredcrambs-item">
-          <a class="bredcrambs-link" href="#">Каталог</a>
+        <li class="breadcrambs-item">
+          <a class="breadcrambs-link" href="#">Каталог</a>
         </li>
-        <li class="bredcrambs-item">
-          <a class="bredcrambs-link bredcrambs-link-current">Сливочное</a>
+        <li class="breadcrambs-item">
+          <a class="breadcrambs-link breadcrambs-link-current">Сливочное</a>
         </li>
       </ul>
     </section>
     <section class="catalog-filter">
-      <h1 class="catalog-filter-title">Сливочное мороженое</h2>
+      <h2 class="catalog-filter-title title-ex-bold">Сливочное мороженое</h2>
       <form class="catalog-form" action="https://echo.htmlacademy.ru/" method="GET">
         <fieldset class="catalog-form-group">
           <legend class="catalog-form-group-title">Сортировка:</legend>
           <label class="catalog-form-label">
             <select class="catalog-form-select" name="sorting">
-              <span class="visually-hidden">Сортировка</span>
               <option value="top">по популярности</option>
               <option value="price">по цене</option>
             </select>
@@ -101,7 +101,7 @@
             <span class="control-label">0%</span>
           </label>
           <label class="control">
-            <input class="visually-hiden control-input" type="radio" name="fatness" checked>
+            <input class="visually-hidden control-input" type="radio" name="fatness" checked>
             <span class="control-mark"></span>
             <span class="control-label">до 10%</span>
           </label>
@@ -119,7 +119,7 @@
         <fieldset class="catalog-form-group">
           <legend class="catalog-form-group-title">Наполнители:</legend>
           <label class="control">
-            <input class="visyally-hidden control-input" type="checkbox" name="chocolate" checked>
+            <input class="visually-hidden control-input" type="checkbox" name="chocolate" checked>
             <span class="control-mark"></span>
             <span class="control-label">шоколадные</span>
           </label>
@@ -151,7 +151,8 @@
       <h2 class="visually-hidden">Карта товаров</h2>
       <ul class="assortment-list">
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/raspberries.png" width="168" height="168" alt="Мороженное Малинка">
+          <img class="assortment-image" src="images/catalog/raspberries.png" width="168" height="168"
+            alt="Шарик мороженного">
           <h3 class="assortment-title">Малинка</h3>
           <p>Сливочное мороженое с малиновым джемом</p>
           <b>310 ₽/кг</b>
@@ -160,7 +161,8 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/pistachio.png" width="168" height="168" alt="Мороженное Фисташка">
+          <img class="assortment-image" src="images/catalog/pistachio.png" width="168" height="168"
+            alt="Шарик мороженного">
           <h3 class="assortment-title">Фисташка</h3>
           <p>Фисташковый пломбир с кусочками шоколада</p>
           <b>340 ₽/кг</b>
@@ -169,7 +171,8 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/blueberry.png" width="168" height="168" alt="Мороженное Черника">
+          <img class="assortment-image" src="images/catalog/blueberry.png" width="168" height="168"
+            alt="Шарик мороженного">
           <h3 class="assortment-title">Черника</h3>
           <p>Крем-брюле
             с черничным джемом</p>
@@ -179,7 +182,8 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/bubble-gum.png" width="168" height="168" alt="Мороженное Бабл-гам">
+          <img class="assortment-image" src="images/catalog/bubble-gum.png" width="168" height="168"
+            alt="Шарик мороженного">
           <h3 class="assortment-title">Бабл-гам</h3>
           <p>Ванильный пломбир со сладкой посыпкой</p>
           <b>320 ₽/кг</b>
@@ -188,7 +192,8 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/blackberry.png" width="168" height="168" alt="Мороженное Ежевика">
+          <img class="assortment-image" src="images/catalog/blackberry.png" width="168" height="168"
+            alt="Шарик мороженного">
           <h3 class="assortment-title">Ежевика</h3>
           <p>Сливочное мороженое с ежевичным джемом</p>
           <b>330 ₽/кг</b>
@@ -197,7 +202,8 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/banana.png" width="168" height="168" alt="Мороженное Банан">
+          <img class="assortment-image" src="images/catalog/banana.png" width="168" height="168"
+            alt="Шарик мороженного">
           <h3 class="assortment-title">Банан</h3>
           <p>Сливочный пломбир
             с банановым вкусом</p>
@@ -207,7 +213,8 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/chocolate.png" width="168" height="168" alt="Мороженное Шоколадка">
+          <img class="assortment-image" src="images/catalog/chocolate.png" width="168" height="168"
+            alt="Шарик мороженного">
           <h3 class="assortment-title">Шоколадка</h3>
           <p>Классический шоколадный пломбир</p>
           <b>270 ₽/кг</b>
@@ -216,7 +223,8 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/strawberry.png" width="168" height="168" alt="Мороженное Клубничка">
+          <img class="assortment-image" src="images/catalog/strawberry.png" width="168" height="168"
+            alt="Шарик мороженного">
           <h3 class="assortment-title">Клубничка</h3>
           <p>Сливочный пломбир
             с клубничным вкусом</p>
@@ -226,7 +234,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/lemon.png" width="168" height="168" alt="Мороженное Лимон">
+          <img class="assortment-image" src="images/catalog/lemon.png" width="168" height="168" alt="Шарик мороженного">
           <h3 class="assortment-title">Лимон</h3>
           <p>Освежающий лимонный сорбет</p>
           <b>310 ₽/кг</b>
@@ -235,7 +243,8 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/menthol.png" width="168" height="168" alt="Мороженное Ментол">
+          <img class="assortment-image" src="images/catalog/menthol.png" width="168" height="168"
+            alt="Шарик мороженного">
           <h3 class="assortment-title">Ментол</h3>
           <p>Сливочный пломбир с ментоловым сиропом</p>
           <b>320 ₽/кг</b>
@@ -244,7 +253,7 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/nuts.png" width="168" height="168" alt="Мороженное Орешек">
+          <img class="assortment-image" src="images/catalog/nuts.png" width="168" height="168" alt="Шарик мороженного">
           <h3 class="assortment-title">Орешек</h3>
           <p>Фисташковый пломбир с шоколадным сиропом</p>
           <b>360 ₽/кг</b>
@@ -253,7 +262,8 @@
           </button>
         </li>
         <li class="assortment-item">
-          <img class="assortment-image" src="images/catalog/creme-brulee.png" width="168" height="168" alt="Мороженное Крем-брюле">
+          <img class="assortment-image" src="images/catalog/creme-brulee.png" width="168" height="168"
+            alt="Шарик мороженного">
           <h3 class="assortment-title">Крем-брюле</h3>
           <p>Классическое крем-брюле</p>
           <b>280 ₽/кг</b>
