--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
       </ul>
     </nav>
   </header>
-  <main class="catalog">
+  <main class="catalog main-container">
     <h1 class="visually-hidden">Страница каталога</h1>
     <section class="catalog-breadcrumbs">
       <h2 class="visually-hidden">Навигационная цепочка</h2>
@@ -308,17 +308,17 @@
       <ul class="social-list">
         <li class="social-item">
           <a class="button" href="#">
-            <span class="visyally-hidden">ВКонтакте</span>
+            <span class="visually-hidden">ВКонтакте</span>
           </a>
         </li>
         <li class="social-item">
           <a class="button" href="#">
-            <span class="visyally-hidden">Фэйсбук</span>
+            <span class="visually-hidden">Фэйсбук</span>
           </a>
         </li>
         <li class="social-item">
           <a class="button" href="#">
-            <span class="visyally-hidden">Инстаграм</span>
+            <span class="visually-hidden">Инстаграм</span>
           </a>
         </li>
       </ul>
