--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="body-wrap">
+  <div class="page-container">
     <header class="page-header">
       <a class="main-logo">
         <img class="logo" src="images/vector/logo.svg" width="137" height="56" alt="Логотип магазина Глэйси">
